Fix unnecessary horizontal scrollbar

--- a/src/styles/elements.scss
+++ b/src/styles/elements.scss
@@ -8,7 +8,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 100vw;
+  width: 100%;
   min-height: 100vh;
 }
 
